# Pac-man

./: .gitignore  Const.py  Game.py  Levels.py  Maze.py  README.md  Sprites.py  build.bat  dev.py  main.py  pyproject.toml  start-game.bat  test.py
.github/workflows/: build.yml
assets/levels/: 1.json  2.json
src/: const.py  level.py  levels.py  maze.py  sprites.py
src/sprites/: __init__.py  food.py  ghost.py  group.py  hero.py  wall.py
