[tool.poetry]
name = "pac-man"
version = "0.1.0"
description = ""
authors = ["wyf7685 <wyf7685@163.com>", "Jackpot-Z <example@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"
pydantic = "^2.9.1"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
