[project]
name = "pac-man"
version = "0.1.0"
description = "game Pac-man"
authors = [
    { name = "wyf7685", email = "wyf7685@163.com" },
    { name = "Jackpot-Z", email = "example@example.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.9.1", "pygame>=2.6.0"]

[tool.uv]
dev-dependencies = [
    "pillow>=10.4.0",
    "pyinstaller>=6.10.0",
]
